Thu Apr 11 06:49:15 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Listen_T.h:
          Added missing includes in case an user includes this template
          stand alone in his own custom connector

Wed Apr 10 14:08:25 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Extended instructions for OpenDDS

Thu Mar 14 12:42:30 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO_TAO_DAnCE_OpenDDS_shapes.mwc:
          New workspace for compiling just the shapes example with everything
          related to it

Thu Mar 14 08:39:03 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next release

        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver_exec.cpp:
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender_exec.cpp:
          Log topic_name with each message

Thu Mar 14 09:04:46 CET 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 1.1.8 released.

Tue Mar 12 13:49:26 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_1.cdp:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_1.pl:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_2.cdp:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_2.pl:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_2.xml:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_3.cdp:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_3.pl:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_3.xml:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_4.cdp:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_4.pl: