@@ -4,3 +4,4 @@
 
 CIAO_Logger_Export unsigned int CIAO_debug_level = 0;
 
+CIAO_Logger_Export ACE_Log_Category CIAO_log_category ("CIAO");
